# Quark

./: Makefile  README.md  example.py  pyproject.toml  visualize.py
.github/workflows/: cd.yml  ci.yml
data/: processor.py
deep/: autoencoder.py
optimizer/: constraints.py
quark/: base.py  facade.py
quark/core/: luminescence.py  objectives.py
quark/data/: loader.py
quark/optimizer/: quark.py  swarmtensor.py
tests/: test_basic.py
